<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".redback_spider">

    <ImageView
        android:id="@+id/redback_image"
        android:layout_width="482dp"
        android:layout_height="309dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/name_redback"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/huntsman_sample" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#8BC34A"
        android:gravity="center_horizontal"
        android:text="@string/name_huntsman"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/huntsman_info"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/huntsman_level"
        android:textSize="21sp" />

</LinearLayout>